.opsera-hcp-0305/k8s/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-hcp-0305-dev
  labels:
    tenant: opsera
    app: hcp-0305
    environment: dev
    managed-by: opsera-c2c
